Add: rm binary with the deep_clean target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,5 +27,5 @@ target_link_libraries(Engine_check ${CMAKE_DL_LIBS})
 
 add_custom_target(deep_clean
   COMMAND find . -iwholename '*cmake*' -not -name CMakeLists.txt -delete
-  COMMAND rm -rf Testing
+  COMMAND rm -rf Testing Engine_check
 )
