--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 project(Engine CXX)
 
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++14 -pedantic -fPIC")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11 -pedantic -fPIC")
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -Werror -O3")
@@ -9,10 +9,16 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -Werror -O3")
 include_directories(src/debug)
 include_directories(src/resource)
 include_directories(src/ui)
+include_directories(src/base)
+include_directories(src/render_backend)
+include_directories(src/engine)
 
 add_subdirectory(src/debug)
 add_subdirectory(src/resource)
 add_subdirectory(src/ui)
+add_subdirectory(src/base)
+add_subdirectory(src/render_backend)
+add_subdirectory(src/engine)
 
 set(CMAKE_CTEST_COMMAND ctest -V)
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
@@ -24,11 +30,13 @@ add_subdirectory(tests/debug)
 add_executable(Engine_check EXCLUDE_FROM_ALL
   tests/debug/main.cc
   $<TARGET_OBJECTS:debug> $<TARGET_OBJECTS:resource>
-  $<TARGET_OBJECTS:ui>)
+  $<TARGET_OBJECTS:ui> $<TARGET_OBJECTS:base>
+  $<TARGET_OBJECTS:render_backend> $<TARGET_OBJECTS:engine_>)
 
-add_library(engine SHARED
+add_library(Engine SHARED
   $<TARGET_OBJECTS:debug> $<TARGET_OBJECTS:resource>
-  $<TARGET_OBJECTS:ui>)
+  $<TARGET_OBJECTS:ui> $<TARGET_OBJECTS:base>
+  $<TARGET_OBJECTS:render_backend> $<TARGET_OBJECTS:engine_>)
 
 add_test(Engine_check Engine_check)
 add_dependencies(check Engine_check)
