--- a/.travis.yml
+++ b/.travis.yml
@@ -2,48 +2,13 @@ language: cpp
 sudo: required
 dist: trusty
 
-matrix:
-  include:
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-4.9
-      env: COMPILER=g++-4.9
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-5
-      env: COMPILER=g++-5
-    - compiler: clang
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.6
-          packages:
-            - clang-3.6
-      env: COMPILER=clang++-3.6
-    - compiler: clang
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.7
-          packages:
-            - clang-3.7
-env: COMPILER=clang++-3.7
-
+compiler:
+- gcc
+- clang
 os:
 - linux
-- osx
 script:
-- cmake -DCMAKE_CXX_COMPILER=$COMPILER .
+- cmake .
 - make
 - make check
 - ./Engine_check
