--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: trusty
 
 before_install:
 - sudo apt-get update -qq
-- sude apt-get install libglm-dev libglfw-dev libglew2.13 libglew-dev libsoil-dev
+- sudo apt-get install libglm-dev libglfw-dev libglew2.13 libglew-dev libsoil-dev
 
 compiler:
 - gcc
