--- a/src/resource/CMakeLists.txt
+++ b/src/resource/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(resource OBJECT obj_loader.cc mesh.cc resource_manager.cc)
+add_library(resource OBJECT obj_loader.cc mesh.cc resource_manager.cc gl_mesh.cc)
