Add: opengl_backend can now render models without any lighting

--- a/src/render_backend/CMakeLists.txt
+++ b/src/render_backend/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_library(render_backend OBJECT opengl_backend.cc render_manager.cc)
+add_library(render_backend OBJECT opengl_backend.cc render_manager.cc opengl_shader_backend.cc)
