Add: changing the architecture of the mesh rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,5 +49,10 @@ target_link_libraries(Engine_check ${CMAKE_DL_LIBS} GL GLEW glfw SOIL)
 
 add_custom_target(deep_clean
   COMMAND find . -iwholename '*cmake*' -not -name CMakeLists.txt -delete
-  COMMAND rm -rf Testing Engine_check libengine.so
+  COMMAND rm -rf Testing Engine_check libengine.so doc/
+)
+
+add_custom_target(doc
+  WORKING_DIRECTORY src
+  COMMAND doxygen ../Doxyfile
 )
