Add: shaders pipeline integration that contains each render pass

--- a/src/render_backend/CMakeLists.txt
+++ b/src/render_backend/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(render_backend OBJECT opengl_backend.cc render_manager.cc opengl_shader_backend.cc opengl_backend_utils.cc)
+add_library(render_backend OBJECT opengl_backend.cc render_manager.cc
+  opengl_shader_backend.cc opengl_backend_utils.cc
+  opengl_shader_pass_no_lighting.cc)
