Add: textures handling (by the resource and render managers) + Add: lod system (not really used yet) + Add: some test textures (need better ones)

--- a/src/resource/CMakeLists.txt
+++ b/src/resource/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_library(resource OBJECT obj_loader.cc mesh.cc resource_manager.cc gl_mesh.cc)
+add_library(resource OBJECT obj_loader.cc mesh.cc resource_manager.cc
+  gl_mesh.cc soil_loader.cc)
