Fix: texture streaming on compressed (DDS) textures + Add: mipmaps handling (still a problem when rendering them) + Add: DDS loader + Clean: allocating mipmaps with glCompressedTexImage2D instead of glGenerateMipmaps + Add: function to generate mipmap dimensions + Add: converted all the textures to DDS (DXT5) + Add: updated the example following the changes

--- a/src/resource/CMakeLists.txt
+++ b/src/resource/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_library(resource OBJECT streamed_texture.cc obj_loader.cc mesh.cc gl_mesh.cc soil_loader.cc resource_manager.cc)
+add_library(resource OBJECT streamed_texture.cc obj_loader.cc mesh.cc
+  gl_mesh.cc soil_loader.cc dds_loader.cc resource_manager.cc)
