--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,11 @@ dist: trusty
 
 before_install:
 - sudo apt-get update -qq
-- sudo apt-get install -y libglm-dev libglfw3-dev libglew-dev libsoil-dev
+- sudo apt-get install -y docker
 
 compiler:
 - gcc
-- clang
 os:
 - linux
 script:
-- cmake .
-- make
-- make check
-- ./Engine_check
+- docker build .
